[package]
name = "syn-builders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.67", default-features = false }
syn = { version = "2.0.35", default-features = false, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
quote = "1.0.33"
syn = { version = "2.0.35", features = ["full", "extra-traits"] }
